# cxxCleanBuildExamples

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
middleManA/src/: CMakeLists.txt
middleManA/src/config/: symbols.map
middleManA/src/include/: store.hpp
middleManA/src/source/: store.cpp
middleManB/src/: CMakeLists.txt
middleManB/src/include/: blackMart.hpp
middleManB/src/source/: blackMart.cpp
tests/: CMakeLists.txt
treasure/src/: CMakeLists.txt
treasure/src/include/: goldEgg.hpp
treasureV1/src/: CMakeLists.txt
treasureV1/src/include/: holyGrail.hpp
treasureV2/src/: CMakeLists.txt
treasureV2/src/include/: holyGrail.hpp
treasureV2/src/source/: holyGrail.cpp
